# data_quality_checker

./: .gitignore  README.md  data_quality_checker_usage_example.py  go.mod  go.sum  knowledge.md  orders.csv  pyproject.toml  pyrefly.toml  quality_checks.db  test.csv  users.csv
.github/workflows/: release.yml
__marimo__/session/: data_quality_checker_usage_example.py.json
cmd/dqc/: main.go
internal/checker/: checker.go  checker_test.go  new_rules_test.go
internal/db/: connector.go  connector_test.go
src/data_quality_checker/: __init__.py  cli.py  main.py
src/data_quality_checker/connector/: output_log.py
tests/: conftest.py
tests/data/: corrupt_data.parquet  duplicate_data.csv  has_nulls.csv  invalid_enum.csv  null_enum.csv  orders.csv  orphaned_orders.csv  users.csv
tests/unit/: test_cli.py  test_data_quality_checker.py  test_db_connector.py
