[project]
name = "data-quality-checker"
version = "0.1.0"
description = "A Python library for validating data quality or small to medium (< 50GB) datasets with Polars DataFrames with automated logging to SQLite."
readme = "README.md"
authors = [
    { email = "joseph.machado@startdataengineering.com" }
]
requires-python = ">=3.13"
dependencies = [
    "polars>=1.37.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "marimo[recommended]>=0.19.4",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "sqlalchemy>=2.0.45",
]
